--- a/Main.HTML
+++ b/Main.HTML
@@ -13,7 +13,7 @@
 <body>
     <header>
 
-        <p id="header_logo">JMSUI.</p>
+        <p id="header_logo">JMSUI</p>
     
         <nav>
             <a href="#ABOUT" id="text">about</a></a> 
