--- a/Main.HTML
+++ b/Main.HTML
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@543&family=Open+Sans:wght@300&family=Poppins&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="stylesheet" href="CSS\Main.css">
-    <script src="SCRIPTS\Main.js"></script>
+    <link rel="stylesheet" href="CSS/Main.css">
     <title>JMSUI</title>
 </head>
 <body>
@@ -24,9 +23,6 @@
 
     </header>
 
-
-
-
     <footer>
 
         <div id="cp-right">© 2022 JMSUI. All rights reserved</div>
@@ -40,7 +36,7 @@
     </footer>
 
 
-
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="SCRIPTS/Main.js"></script>
 </body>
 </html>
