--- a/Main.HTML
+++ b/Main.HTML
@@ -15,13 +15,45 @@
         <p id="header_logo">JMSUI 10</p>
     
         <nav>
-            <a href="#ABOUT" id="text">about</a></a> 
-            <a href="#CONTACT" id="text">contact</a></a>
-            <a href="#Gallery" id="text">gallery</a></a>
-            <a href="#AskMe" id="text">ask me</a></a>
+            <a href="About.HTML"  id="text" id="about">about</a></a> 
+            <a href="CONTACT.HTML" id="text">contact</a></a>
+            <a href="Gallery.HTML" id="text">gallery</a></a>
+            <a href="AskMe.HTML" id="text">ask me</a></a>
         </nav>
 
     </header>
+
+    <center>
+    <section id="content">
+        <div id="container">
+            1
+        </div>
+    </section>
+    </center>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
     <footer>
 
