--- a/Main.HTML
+++ b/Main.HTML
@@ -12,7 +12,7 @@
 <body>
     <header>
 
-        <p id="header_logo">JMSUI 10</p>
+        <p id="header_logo">JMSUI</p>
     
         <nav>
             <a href="About.HTML"  id="text" id="about">about</a></a> 
@@ -26,7 +26,7 @@
     <center>
     <section id="content">
         <div id="container">
-            1
+            
         </div>
     </section>
     </center>
