--- a/Main.HTML
+++ b/Main.HTML
@@ -12,21 +12,27 @@
 <body>
     <header>
 
-        <p id="header_logo">JMSUI</p>
+        <a id="header_logo" href="Main.HTML">JMSUI</a>
     
         <nav>
-            <a href="About.HTML"  id="text" id="about">about</a></a> 
-            <a href="CONTACT.HTML" id="text">contact</a></a>
-            <a href="Gallery.HTML" id="text">gallery</a></a>
-            <a href="AskMe.HTML" id="text">ask me</a></a>
+            <a href="About.HTML"  id="text" id="about">about</a>
+            <a href="CONTACT.HTML" id="text">contact</a>
+            <a href="Gallery.HTML" id="text">gallery</a>
+            <a href="AskMe.HTML" id="text">ask me</a>
+            <div id="burger">
+                <div class="line_one" id="line"></div>
+                <div class="line_dwo" id="line"></div>
+                <div class="line_three" id="line"></div>
+            </div>
         </nav>
+
 
     </header>
 
     <center>
     <section id="content">
         <div id="container">
-            
+            <h1>Hello guys</h1>
         </div>
     </section>
     </center>
