--- a/Main.HTML
+++ b/Main.HTML
@@ -32,7 +32,7 @@
     <center>
     <section id="content">
         <div id="container">
-            <h1>Hello guys, back today :)</h1>
+            <h1>Hello guys, back today >:)</h1>
         </div>
     </section>
     </center>
