--- a/CONTACT.HTML
+++ b/CONTACT.HTML
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="main">HELLO :)</div>
+    <div id="main">under construction</div>
 </body>
 </html>
