--- a/About.HTML
+++ b/About.HTML
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="main">under construction</div>
+    <div id="main"><h1> under construction </h1></div>
 </body>
 </html>
