--- a/Main.HTML
+++ b/Main.HTML
@@ -35,6 +35,7 @@
     <section id="content">
         <div id="container">
             <h1>Hello guys, back today</h1>
+            <h2>I'm a 16 year old student of the Gdańsk high school who learns programming from <span id="clock"></span> and this is my website</h2>
         </div>
     </section>
     </center>
