--- a/Main.HTML
+++ b/Main.HTML
@@ -21,9 +21,9 @@
             <a href="AskMe.HTML" id="text">ask me</a>
         </nav>
             <div id="burger">
-                <div class="line_one" id="line"></div>
-                <div class="line_dwo" id="line"></div>
-                <div class="line_three" id="line"></div>
+                <div class="line_one" id="line1"></div>
+                <div class="line_dwo" id="line2"></div>
+                <div class="line_three" id="line3"></div>
             
             </div>
 
