--- a/Main.HTML
+++ b/Main.HTML
@@ -12,7 +12,7 @@
 <body>
     <header>
 
-        <a id="header_logo" href="Main.HTML">JMSUI</a>
+        <a id="header_logo" href="Main.HTML" >JM*SUI</a>
     
         <nav>
             <a href="About.HTML"  id="text" id="about">about</a>
