--- a/About.HTML
+++ b/About.HTML
@@ -4,9 +4,38 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@543&family=Open+Sans:wght@300&family=Poppins&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="stylesheet" href="CSS/ABOUT.css">
     <title>Document</title>
 </head>
 <body>
+    <header>
+
+    <a id="header_logo" href="Main.HTML" >JM*SUI</a>
+
+    <nav>
+        <a href="About.HTML"  id="text" id="about">about</a>
+        <a href="CONTACT.HTML" id="text">contact</a>
+        <a href="Gallery.HTML" id="text">gallery</a>
+        <a href="AskMe.HTML" id="text">ask me</a>
+    </nav>
+        <div id="burger">
+            <div class="line_one" id="line1"></div>
+            <div class="line_dwo" id="line2"></div>
+            <div class="line_three" id="line3"></div>
+        
+        </div>
+
+</header>
+<center>
     <div id="main"><h1> under construction </h1></div>
+</center>
+
+
+<div id="app"></div>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="SCRIPTS/ABOUT.js"></script>
 </body>
 </html>
