--- a/Main.HTML
+++ b/Main.HTML
@@ -28,8 +28,6 @@
             
             </div>
 
-
-
     </header>
 
     <center>
@@ -53,8 +51,8 @@
 
         <div id="main-contats">
             <a id="all" href="https://discord.com/users/845339405383499806"><i id="fa" class="fa-brands fa-discord"></i></a>
-            <a id="all" href="https://github.com/mkuba2006"> <i id="fa" class="fa fa-instagram"></i></a>
-            <a id="all" href="https://www.facebook.com/profile.php?id=100042699441638"><i id="fa" class="fa fa-github"></i></a>
+            <a id="all" href="https://www.facebook.com/profile.php?id=100042699441638" > <i id="fa" class="fa fa-instagram"></i></a>
+            <a id="all" href="https://github.com/mkuba2006"><i id="fa" class="fa fa-github"></i></a>
         </div>
 
     </footer>
