--- a/About.HTML
+++ b/About.HTML
@@ -32,9 +32,9 @@
     <div id="main"><h1> under construction </h1></div>
 </center>
 
-
+<center>
 <div id="app"></div>
-
+</center>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="SCRIPTS/ABOUT.js"></script>
 </body>
