--- a/About.HTML
+++ b/About.HTML
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@543&family=Open+Sans:wght@300&family=Poppins&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="stylesheet" href="CSS/ABOUT.css">
-    <title>Document</title>
+    <title>About</title>
 </head>
 <body>
     <header>
@@ -28,13 +28,23 @@
         </div>
 
 </header>
+
+
+<div class="bodyl">
+
+
+
 <center>
     <div id="main"><h1> under construction </h1></div>
 </center>
 
-<center>
 <div id="app"></div>
-</center>
+
+
+
+</div>
+
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="SCRIPTS/ABOUT.js"></script>
 </body>
