--- a/Main.HTML
+++ b/Main.HTML
@@ -8,6 +8,7 @@
     <script src="https://kit.fontawesome.com/9b742cfd8c.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="stylesheet" href="CSS/Main.css">
+    <link rel="stylesheet" href="CSS/background.css">
     <title>JMSUI</title>
 </head>
 <body>
