--- a/About.HTML
+++ b/About.HTML
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@543&family=Open+Sans:wght@300&family=Poppins&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="stylesheet" href="CSS/ABOUT.css">
+    <link rel="stylesheet" href="CSS/background.css">
     <title>About</title>
 </head>
 <body>
