--- a/About.HTML
+++ b/About.HTML
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@543&family=Open+Sans:wght@300&family=Poppins&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="stylesheet" href="CSS/ABOUT.css">
+    <link rel="stylesheet" href="CSS/about.css">
     <link rel="stylesheet" href="CSS/background.css">
     <title>About</title>
 </head>
@@ -47,6 +47,6 @@
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="SCRIPTS/ABOUT.js"></script>
+    <script src="SCRIPTS/about.js"></script>
 </body>
 </html>
