--- a/AskMe.HTML
+++ b/AskMe.HTML
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="CSS/AskMe.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@543&family=Open+Sans:wght@300&family=Poppins&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/9b742cfd8c.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="stylesheet" href="CSS/ask.css">
     <link rel="stylesheet" href="CSS/background.css">
     <title>Ask Me</title>
 </head>
@@ -34,5 +37,8 @@
             <div id="main"><h1> under construction </h1></div>
         </center>
         </div>
+
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+        <script src="SCRIPTS/ask.js"></script>
 </body>
 </html>
