--- a/Main.HTML
+++ b/Main.HTML
@@ -14,7 +14,7 @@
 <body>
     <header>
 
-        <a id="header_logo" href="Main.HTML" >JM*SUI</a>
+        <a id="header_logo" href="Main.HTML" ><b>JM*SUI</b></a>
     
         <nav>
             <a href="About.HTML"  id="text" id="about">about</a>
@@ -33,8 +33,8 @@
     <center>
     <section id="content">
         <div id="container">
-            <h1>Hello guys, back today</h1>
-            <h2>I'm a 16 year old student of the Gdańsk high school who learns programming from <span id="clock"></span> and this is my website</h2>
+            <h1>Hello my lord, back today</h1>
+            <h2>I am a 16 year old high school student in Gdansk who has been coding for <span id="clock"></span>. Yes I'm centring divs :) </h2>
         </div>
     </section>
     </center>
