--- a/Main.HTML
+++ b/Main.HTML
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@543&family=Open+Sans:wght@300&family=Poppins&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/9b742cfd8c.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="stylesheet" href="CSS/Main.css">
@@ -49,10 +50,16 @@
 
         <div id="cp-right">© 2022 JMSUI. All rights reserved</div>
 
-        <div id="main-contats" >
-            <a id="all" href="https://discord.com/users/845339405383499806"><i id="fa" class="fa-brands fa-discord"></i></a>
-            <a id="all" href="https://www.facebook.com/profile.php?id=100042699441638" > <i id="fa" class="fa fa-instagram"></i></a>
-            <a id="all" href="https://github.com/mkuba2006"><i id="fa" class="fa fa-github"></i></a>
+        <div id="main-contacts" >
+
+            <!-- <a id="all" href="https://discord.com/users/845339405383499806"><i id="fa" class="fa-brands fa-discord"></i></a> -->
+            <!-- <a id="all" href="https://www.facebook.com/profile.php?id=100042699441638" ><i id="fa" class="fa fa-instagram"></i></a> -->
+            <!-- <a id="all" href="https://github.com/mkuba2006"><i id="fa" class="fa fa-github"></i></a> -->
+
+            <a id="all" class="icon icon--discord" href="https://discord.com/users/845339405383499806"><i id="fa" class="ri-discord-line"></i></a>
+            <a id="all" class="icon icon--instagram" href="https://www.facebook.com/profile.php?id=100042699441638" ><i id="fa" class="ri-instagram-line "></i></a>
+            <a id="all" class="icon icon--github" href="https://github.com/mkuba2006"><i id="fa" class="ri-github-fill"></i></a>
+
         </div>
 
     </footer>
