--- a/Main.HTML
+++ b/Main.HTML
@@ -57,7 +57,7 @@
             <!-- <a id="all" href="https://github.com/mkuba2006"><i id="fa" class="fa fa-github"></i></a> -->
 
             <a id="all" class="icon icon--discord" href="https://discord.com/users/845339405383499806"><i id="fa" class="ri-discord-line"></i></a>
-            <a id="all" class="icon icon--instagram" href="https://www.facebook.com/profile.php?id=100042699441638" ><i id="fa" class="ri-instagram-line "></i></a>
+            <a id="all" class="icon icon--instagram" href="https://www.instagram.com/jakub_myrta/" ><i id="fa" class="ri-instagram-line "></i></a>
             <a id="all" class="icon icon--github" href="https://github.com/mkuba2006"><i id="fa" class="ri-github-fill"></i></a>
 
         </div>
