--- a/Main.HTML
+++ b/Main.HTML
@@ -34,7 +34,7 @@
     <center>
     <section id="content">
         <div id="container">
-            <h1>Hello my lord, back today</h1>
+            <h1>Hello my lord, back today:)</h1>
             <h2>I am a 16 year old high school student in Gdansk who has been coding for <span id="clock"></span>. Yes I'm centring divs :) </h2>
         </div>
     </section>
