--- a/Gallery.HTML
+++ b/Gallery.HTML
@@ -33,7 +33,7 @@
     
     <div class="bodyl">
         <center>
-            <div id="main"><h1> under construction </h1></div>
+            <div id="main"><h1> under construction... </h1></div>
         </center>
         </div>
 
