--- a/About.HTML
+++ b/About.HTML
@@ -8,6 +8,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="stylesheet" href="CSS/about.css">
     <link rel="stylesheet" href="CSS/background.css">
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="SCRIPTS/About.js" defer type="module"></script>
+
     <title>About</title>
 </head>
 <body>
@@ -43,7 +47,6 @@
 </div>
 
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="SCRIPTS/about.js"></script>
+
 </body>
 </html>
