--- a/AskMe.HTML
+++ b/AskMe.HTML
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@543&family=Open+Sans:wght@300&family=Poppins&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/9b742cfd8c.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="stylesheet" href="CSS/ask.css">
+    <link rel="stylesheet" href="CSS/Ask/ask.css">
     <link rel="stylesheet" href="CSS/background.css">
     <title>Ask Me</title>
 </head>
