--- a/Gallery.HTML
+++ b/Gallery.HTML
@@ -8,7 +8,7 @@
     <script src="https://kit.fontawesome.com/9b742cfd8c.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <title>Document</title>
-    <link rel="stylesheet" href="CSS/gallery.css">
+    <link rel="stylesheet" href="CSS/Gallery/gallery.css">
     <link rel="stylesheet" href="CSS/background.css">
 </head>
 <body>
