--- a/CONTACT.HTML
+++ b/CONTACT.HTML
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/9b742cfd8c.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="stylesheet" href="CSS/contact.css">
+    <link rel="stylesheet" href="CSS/Contact/contact.css">
     <link rel="stylesheet" href="CSS/background.css">
     <title>Contact</title>
 </head>
