--- a/About.HTML
+++ b/About.HTML
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="CSS/background.css">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="SCRIPTS/About.js" defer type="module"></script>
+    <script src="SCRIPTS/About/About.js" defer type="module"></script>
 
     <title>About</title>
 </head>
