--- a/AskMe.HTML
+++ b/AskMe.HTML
@@ -39,6 +39,6 @@
         </div>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-        <script src="SCRIPTS/ask.js"></script>
+        <script src="SCRIPTS/Ask/ask.js"></script>
 </body>
 </html>
