--- a/CONTACT.HTML
+++ b/CONTACT.HTML
@@ -10,6 +10,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="stylesheet" href="CSS/Contact/contact.css">
     <link rel="stylesheet" href="CSS/background.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="SCRIPTS/Contact/Sum.js" defer type="module"></script>
     <title>Contact</title>
 </head>
 <body>
@@ -41,7 +43,6 @@
     <center>
         <div id="app"></div>
     </center>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="SCRIPTS/contact.js"></script>
+
 </body>
 </html>
