--- a/Gallery.HTML
+++ b/Gallery.HTML
@@ -38,6 +38,6 @@
         </div>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-        <script src="SCRIPTS/gallery.js"></script>
+        <script src="SCRIPTS/Gallery/gallery.js"></script>
 </body>
 </html>
