--- a/Main.HTML
+++ b/Main.HTML
@@ -40,32 +40,17 @@
     </section>
     </center>
 
-
-
-
-
-
-
     <footer>
 
         <div id="cp-right">© 2022 JMSUI. All rights reserved</div>
 
         <div id="main-contacts" >
-
-            <!-- <a id="all" href="https://discord.com/users/845339405383499806"><i id="fa" class="fa-brands fa-discord"></i></a> -->
-            <!-- <a id="all" href="https://www.facebook.com/profile.php?id=100042699441638" ><i id="fa" class="fa fa-instagram"></i></a> -->
-            <!-- <a id="all" href="https://github.com/mkuba2006"><i id="fa" class="fa fa-github"></i></a> -->
-
             <a id="all" class="icon icon--discord" href="https://discord.com/users/845339405383499806"><i id="fa" class="ri-discord-line"></i></a>
             <a id="all" class="icon icon--instagram" href="https://www.instagram.com/jakub_myrta/" ><i id="fa" class="ri-instagram-line "></i></a>
             <a id="all" class="icon icon--github" href="https://github.com/mkuba2006"><i id="fa" class="ri-github-fill"></i></a>
-
         </div>
-
     </footer>
-
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="SCRIPTS/Main.js"></script>
+    <script src="SCRIPTS/Main/Main.js"></script>
 </body>
 </html>
