I added fullpage.js

--- a/About.HTML
+++ b/About.HTML
@@ -8,8 +8,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="stylesheet" href="CSS/About/about.CSS">
     <link rel="stylesheet" href="CSS/background.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/4.0.15/fullpage.min.css"  />
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/4.0.15/fullpage.min.js"></script>
     <script src="SCRIPTS/About/About.js" defer type="module"></script>
 
     <title>About</title>
@@ -35,16 +37,15 @@
 </header>
 
 
-<div class="bodyl">
 
 
+    <div id="fullPage">
 
+        <div id="app" class="section s1"></div>
 
-<div id="app"></div>
+        <div id="app2" class="section s2">123</div>
+    </div>
 
-
-
-</div>
 
 
 
