--- a/About.HTML
+++ b/About.HTML
@@ -10,13 +10,12 @@
     <link rel="stylesheet" href="CSS/background.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/4.0.15/fullpage.min.css"  />
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/4.0.15/fullpage.min.js"></script>
-    <script src="SCRIPTS/About/About.js" defer type="module"></script>
+
 
     <title>About</title>
 </head>
 <body>
+    
     <header>
 
     <a id="header_logo" href="Main.HTML" >JM*SUI</a>
@@ -37,7 +36,7 @@
 </header>
 
 
-
+<center></center>
 
     <div id="fullPage">
 
@@ -48,6 +47,8 @@
 
 
 
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/4.0.15/fullpage.min.js"></script>
+    <script src="SCRIPTS/About/About.js" defer type="module"></script>
 </body>
 </html>
