--- a/About.HTML
+++ b/About.HTML
@@ -36,7 +36,7 @@
 </header>
 
 
-<center></center>
+<center>
 
     <div id="fullPage">
 
@@ -44,11 +44,11 @@
 
         <div id="app2" class="section s2">123</div>
     </div>
-
-
+</center>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/4.0.15/fullpage.min.js"></script>
     <script src="SCRIPTS/About/About.js" defer type="module"></script>
+
 </body>
 </html>
