--- a/Main.HTML
+++ b/Main.HTML
@@ -45,11 +45,19 @@
         <div id="cp-right">© 2022 JMSUI. All rights reserved</div>
 
         <div id="main-contacts" >
-            <a id="all" class="icon icon--discord" href="https://discord.com/users/845339405383499806"><i id="fa" class="ri-discord-line"></i></a>
+            <!-- <a id="all" class="icon icon--discord" href="https://discord.com/users/845339405383499806"><i id="fa" class="ri-discord-line"></i></a>
             <a id="all" class="icon icon--instagram" href="https://www.instagram.com/jakub_myrta/" ><i id="fa" class="ri-instagram-line "></i></a>
-            <a id="all" class="icon icon--github" href="https://github.com/mkuba2006"><i id="fa" class="ri-github-fill"></i></a>
+            <a id="all" class="icon icon--github" href="https://github.com/mkuba2006"><i id="fa" class="ri-github-fill"></i></a> -->
+
+
+            <a id="all" href="https://github.com/mkuba2006" class="social-icon"> <i class="fa fa-github"></i></a>
+            <a id="all" href="https://www.instagram.com/jakub_myrta/" class="social-icon"> <i class="fa fa-instagram"></i></a>
+            <a id="all" href="https://discord.com/users/845339405383499806" class="social-icon"><i class="fa fa-brands fa-discord"></i></a>
+
+
         </div>
     </footer>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="SCRIPTS/Main/Main.js"></script>
 </body>
